compiler/tests/snapshots/parse_success__type_struct_across_lines.snap
---
source: compiler/tests/parse_success.rs
expression: "struct Person (\n  name :: String,\n  age :: Int\n)"
---

=== Source ===
struct Person (
  name :: String,
  age :: Int
)

=== Tokens ===
[
    KeywordStruct(
        0,
        6,
    ),
    Identifier(
        7,
        13,
    ),
    LeftParen(
        14,
        15,
    ),
    LineBreak(
        15,
        16,
    ),
    Identifier(
        18,
        22,
    ),
    DoubleColon(
        23,
        25,
    ),
    Identifier(
        26,
        32,
    ),
    Comma(
        32,
        33,
    ),
    LineBreak(
        33,
        34,
    ),
    Identifier(
        36,
        39,
    ),
    DoubleColon(
        40,
        42,
    ),
    Identifier(
        43,
        46,
    ),
    LineBreak(
        46,
        47,
    ),
    RightParen(
        47,
        48,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        48,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                48,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        48,
                    ),
                    kind: Struct {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        18,
                                        22,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        26,
                                        32,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                26,
                                                32,
                                            ),
                                            name: "String",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        36,
                                        39,
                                    ),
                                    name: "age",
                                },
                                TypeExprNode {
                                    pos: (
                                        43,
                                        46,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                43,
                                                46,
                                            ),
                                            name: "Int",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            7,
                            13,
                        ),
                        name: "Person",
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

