compiler/tests/snapshots/parse_success__type_trait_mix_fields_and_methods.snap
---
source: compiler/tests/parse_success.rs
expression: "trait WowieWithName\n  . getWow () -> Wow\n  . setWow Wow -> ()\n  . name :: String"
---

=== Source ===
trait WowieWithName
  . getWow () -> Wow
  . setWow Wow -> ()
  . name :: String

=== Tokens ===
[
    KeywordTrait(
        0,
        5,
    ),
    Identifier(
        6,
        19,
    ),
    LineBreak(
        19,
        20,
    ),
    Dot(
        22,
        23,
    ),
    Identifier(
        24,
        30,
    ),
    LeftParen(
        31,
        32,
    ),
    RightParen(
        32,
        33,
    ),
    Arrow(
        34,
        36,
    ),
    Identifier(
        37,
        40,
    ),
    LineBreak(
        40,
        41,
    ),
    Dot(
        43,
        44,
    ),
    Identifier(
        45,
        51,
    ),
    Identifier(
        52,
        55,
    ),
    Arrow(
        56,
        58,
    ),
    LeftParen(
        59,
        60,
    ),
    RightParen(
        60,
        61,
    ),
    LineBreak(
        61,
        62,
    ),
    Dot(
        64,
        65,
    ),
    Identifier(
        66,
        70,
    ),
    DoubleColon(
        71,
        73,
    ),
    Identifier(
        74,
        80,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        80,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                80,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        80,
                    ),
                    kind: Trait {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        66,
                                        70,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        74,
                                        80,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                74,
                                                80,
                                            ),
                                            name: "String",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                        methods: [
                            (
                                [
                                    (
                                        IdentifierNode {
                                            pos: (
                                                24,
                                                30,
                                            ),
                                            name: "getWow",
                                        },
                                        TypeExprNode {
                                            pos: (
                                                31,
                                                33,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                    ),
                                ],
                                TypeExprNode {
                                    pos: (
                                        37,
                                        40,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                37,
                                                40,
                                            ),
                                            name: "Wow",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                [
                                    (
                                        IdentifierNode {
                                            pos: (
                                                45,
                                                51,
                                            ),
                                            name: "setWow",
                                        },
                                        TypeExprNode {
                                            pos: (
                                                52,
                                                55,
                                            ),
                                            kind: Single(
                                                TypeIdentifierNode {
                                                    pos: (
                                                        52,
                                                        55,
                                                    ),
                                                    name: "Wow",
                                                    generics: [],
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                ],
                                TypeExprNode {
                                    pos: (
                                        59,
                                        61,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            19,
                        ),
                        name: "WowieWithName",
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

